--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="banana-selector">
             <select id="bananaSelect">
             <option value="">Select a banana image...</option>
-            <option value="assets/cavendish.jpg">Cavendish Banana</option>
-            <option value="assets/lady-finger.jpg">Lady Finger Banana</option>
-            <option value="assets/red-banana.jpg">Red Banana</option>
+            <option value="Assets/cavendish.jpg">Cavendish Banana</option>
+            <option value="Assets/lady-finger.jpg">Lady Finger Banana</option>
+            <option value="Assets/red-banana.jpg">Red Banana</option>
             </select>
             <div class="image-container">
             <img id="bananaImage" src="" alt="Selected banana" style="display: none; max-width: 300px; height: auto;">
